--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class="navBar">
     <nav>
      <ul class="nav_links">
-        <li><a href="#"><img src="G:\hospitalSite\png\hospital-emoji.png"> Home</a></li>
+        <li><a href="#"><img src="\hospitalSite\png\hospital-emoji.png"> Home</a></li>
         <li><a href="#"><img src="G:\hospitalSite\png\facility.png"> Services</a></li>
         <li><a href="#"><img src="G:\hospitalSite\png\appointment.png"> Appointment</a></li>
         <li><a href="#"><img src="G:\hospitalSite\png\pen2.png"> Blogs</a></li>
