--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 <div class="navBar">
     <nav>
      <ul class="nav_links">
-        <li><a href="#"><img src="\png\hospital-emoji.png"> Home</a></li>
-        <li><a href="#"><img src="G:\hospitalSite\png\facility.png"> Services</a></li>
-        <li><a href="#"><img src="G:\hospitalSite\png\appointment.png"> Appointment</a></li>
-        <li><a href="#"><img src="G:\hospitalSite\png\pen2.png"> Blogs</a></li>
-        <li><a href="#"><img src="G:\hospitalSite\png\external-career-untact-economy-coco-line-kalash.png"> Career</a></li>
+        <li><a href="#"><img src="png/hospital-emoji.png"> Home</a></li>
+        <li><a href="#"><img src="png/facility.png"> Services</a></li>
+        <li><a href="#"><img src="png/appointment.png"> Appointment</a></li>
+        <li><a href="#"><img src="png/pen2.png"> Blogs</a></li>
+        <li><a href="#"><img src="png/external-career-untact-economy-coco-line-kalash.png"> Career</a></li>
      </ul>  
     </nav>
     <a href="#"><button class="contact">Contact</button></a>
