--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
     <div id="marq">
     <marquee direction="up">
         <div class="marq">
-            <div><a href="https://youtu.be/zI89GOMlSr0"><video loop muted autoplay="autoplay"><source src="G:\hospitalSite\video\video1.mp4" type="video/mp4" ></video></div>
-            <div><a href="https://youtu.be/yXuiA_6q1eQ"><video loop muted autoplay="autoplay"><source src="G:\hospitalSite\video\video2.mp4" type="video/mp4" ></video></div>
-            <div><a href="https://youtu.be/0s35QCFg7p0"><video loop muted autoplay="autoplay"><source src="G:\hospitalSite\video\video3.mp4" type="video/mp4" ></video></div>
-            <div><a href="https://youtu.be/AqVBtKEOSOU"><video loop muted autoplay="autoplay"><source src="G:\hospitalSite\video\video4.mp4" type="video/mp4" ></video></div>
+            <div><a href="https://youtu.be/zI89GOMlSr0"><video loop muted autoplay="autoplay"><source src="video/video1.mp4" type="video/mp4" ></video></div>
+            <div><a href="https://youtu.be/yXuiA_6q1eQ"><video loop muted autoplay="autoplay"><source src="video/video2.mp4" type="video/mp4" ></video></div>
+            <div><a href="https://youtu.be/0s35QCFg7p0"><video loop muted autoplay="autoplay"><source src="video/video3.mp4" type="video/mp4" ></video></div>
+            <div><a href="https://youtu.be/AqVBtKEOSOU"><video loop muted autoplay="autoplay"><source src="video/video4.mp4" type="video/mp4" ></video></div>
         </div>
     </marquee>
 </div>
@@ -146,25 +146,25 @@
     <nav>
         <ul class="navstyle">
            <li id="navid">Social Media</li>
-           <li><a href="https://www.instagram.com/accounts/login/"><img src="G:\hospitalSite\png\instagram-new.png"> Instagram</a></li>
-           <li><a href="https://www.facebook.com/"><img src="G:\hospitalSite\png\facebook-new.png"> Facebook</a></li>
-           <li><a href="https://www.youtube.com/"><img src="G:\hospitalSite\png\youtube-play.png"> YouTube</a></li>
-           <li><a href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiZW4ifQ%3D%3D%22%7D"><img src="G:\hospitalSite\png\twitter.png"> Twitter</a></li>
+           <li><a href="https://www.instagram.com/accounts/login/"><img src="png/instagram-new.png"> Instagram</a></li>
+           <li><a href="https://www.facebook.com/"><img src="png/facebook-new.png"> Facebook</a></li>
+           <li><a href="https://www.youtube.com/"><img src="png/youtube-play.png"> YouTube</a></li>
+           <li><a href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiZW4ifQ%3D%3D%22%7D"><img src="png/twitter.png"> Twitter</a></li>
            </ul>  
        </nav>
        <nav>
         <ul class="navstyle">
            <li id="navid">Our Privacy Policy is Here</li>
-           <li><a href="#"><img src="G:\hospitalSite\png\privacy.png"> Privacy Policy</a></li>
+           <li><a href="#"><img src="png/privacy.png"> Privacy Policy</a></li>
            <li id="navid">Phone no :</li>
-           <li><a href="#"><img src="G:\hospitalSite\png\tele.png"> 0721-2525506</a></li>
+           <li><a href="#"><img src="png/tele.png"> 0721-2525506</a></li>
        </nav>
        <nav>
         <ul class="navstyle">
            <li id="navid"> Our Termsand Conditions</li>
-           <li><a href="#"><img src="G:\hospitalSite\png\terms-and-conditions.png"> Terms and condition</a></li>
+           <li><a href="#"><img src="png/terms-and-conditions.png"> Terms and condition</a></li>
            <li id="navid">E-mail:</li>
-           <li><a href="#"><img src="G:\hospitalSite\png\mail.png"> lkrushaji@gmail.com</a></li>
+           <li><a href="#"><img src="png/mail.png"> lkrushaji@gmail.com</a></li>
            </ul>  
        </nav>
 </div>
