--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
     <nav>
      <ul class="navstyle">
         <li id="navid">Importat Links</li>
-        <li><a href="#"><img src="G:\hospitalSite\png\hospital-emoji.png"> Home</a></li>
-        <li><a href="#"><img src="G:\hospitalSite\png\facility.png"> Services</a></li>
-        <li><a href="#"><img src="G:\hospitalSite\png\appointment.png">  Appointment</a></li>
-        <li><a href="#"><img src="G:\hospitalSite\png\pen2.png"> Blogs</a></li>
-        <li><a href="#"><img src="G:\hospitalSite\png\external-career-untact-economy-coco-line-kalash.png"> Career</a></li>
+        <li><a href="#"><img src="png/hospital-emoji.png"> Home</a></li>
+        <li><a href="#"><img src="png/facility.png"> Services</a></li>
+        <li><a href="#"><img src="png/appointment.png">  Appointment</a></li>
+        <li><a href="#"><img src="png/pen2.png"> Blogs</a></li>
+        <li><a href="#"><img src="png/external-career-untact-economy-coco-line-kalash.png"> Career</a></li>
      </ul>  
     </nav>
     <nav>
