--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     
     <div class="tittle">
-        <h1>Late. Krushnarao Ratnaparkhi Memorial Dental Hospital</h1>
+        <h1>Dr. Ratnaparkhi Dental Hospital</h1>
         <h3>Behind Ravi Nagar, Near Maheshwar Temple,<br/> Amba Vihar Amravati, 444605</h3>
         <h4>Ph : 0721-2525506</h4>
     </div>
